--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://getmouth.github.io/meetup",
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -34,6 +35,8 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "jest-cucumber": "^2.0.11",
+    "puppeteer": "^1.18.1"
   }
 }
